--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
     "# Defining new x variable\n",
     "X_third = data['sqft_living_sqrt']\n",
     "\n",
-    "# Creating  second model\n",
+    "# Creating third model\n",
     "third_model = sm.OLS(endog=y, exog=sm.add_constant(X_third))\n",
     "\n",
     "# Fitting the model\n",
@@ -1690,11 +1690,11 @@
     }
    ],
    "source": [
-    "# Defining new x and y variables\n",
+    "# Defining x and y variables\n",
     "y = df['price_log']\n",
     "X_fourth = df[['sqft_living_sqrt', 'house_age']]\n",
     "\n",
-    "# Creating  second model\n",
+    "# Creating fourth model\n",
     "fourth_model = sm.OLS(endog=y, exog=sm.add_constant(X_fourth))\n",
     "\n",
     "# Fitting the model\n",
@@ -1835,7 +1835,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### iii. "
+    "### iii. Recursive feature elimination"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of relying on intuition and industry knowledge for feature selection, we will perform recursive feature elimination to select features that are better suited for modeling the variation in the target."
    ]
   },
   {
@@ -1869,15 +1876,253 @@
     "# select the best 4 features\n",
     "best_feature_indices = rfe.ranking_.argsort()[:4]\n",
     "best_feature_names = list(X.columns[best_feature_indices])\n",
+    "\n",
     "print(\"Best features:\", best_feature_names)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our RFE results make clear that the encoded categorical feature 'grade' from our initial dataframe contains valuable information and might improve our model. Since 'grade_13 Mansion' and 'grade_12 Luxury' might largely represent outliers in house price, let's go with 'grade_11 Excellent' to start, then add 'grade_2 Substandard', and plot each respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First iteration of multiple linear regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              price_log   R-squared:                       0.391\n",
+      "Model:                            OLS   Adj. R-squared:                  0.391\n",
+      "Method:                 Least Squares   F-statistic:                     6456.\n",
+      "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        08:39:59   Log-Likelihood:                -19031.\n",
+      "No. Observations:               30155   AIC:                         3.807e+04\n",
+      "Df Residuals:                   30151   BIC:                         3.810e+04\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "======================================================================================\n",
+      "                         coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------------\n",
+      "const                 12.0535      0.015    819.498      0.000      12.025      12.082\n",
+      "sqft_living_sqrt       0.0359      0.000    126.100      0.000       0.035       0.036\n",
+      "house_age              0.0013   8.58e-05     15.547      0.000       0.001       0.002\n",
+      "grade_11 Excellent     0.4347      0.024     18.444      0.000       0.388       0.481\n",
+      "==============================================================================\n",
+      "Omnibus:                     5895.500   Durbin-Watson:                   1.969\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            50689.482\n",
+      "Skew:                          -0.700   Prob(JB):                         0.00\n",
+      "Kurtosis:                       9.196   Cond. No.                         634.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/learn-env/lib/python3.8/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only.\n",
+      "  x = pd.concat(x[::order], 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining x and y variables\n",
+    "y = df['price_log']\n",
+    "X_fifth = df[['sqft_living_sqrt', 'house_age', 'grade_11 Excellent']]\n",
+    "\n",
+    "# Creating fifth model\n",
+    "fifth_model = sm.OLS(endog=y, exog=sm.add_constant(X_fifth))\n",
+    "\n",
+    "# Fitting the model\n",
+    "fifth_results = fifth_model.fit()\n",
+    "\n",
+    "print(fifth_results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterated model interpretation of results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The coefficient for 'sqft_living_sqrt' is 0.0359, with a standard error of 0.000 and a p-value of 0.000. This suggests that the estimated effect of sqft_living_sqrt on price_log is statistically significant and unlikely to have occurred by chance. We can say with 95% confidence that the true effect of sqft_living_sqrt on price_log lies between 0.035 and 0.036. So, we can conclude that for each unit increase in the square root of the living area, the expected log price of the house increases by approximately 0.0359 units, after controlling for the effects of the other variables in the model.\n",
+    "\n",
+    "The coefficient for 'house_age' is 0.0013, with a standard error of 8.58e-05 and a p-value of 0.000. This suggests that the estimated effect of house_age on price_log is statistically significant and unlikely to have occurred by chance. Specifically, we can say with 95% confidence that the true effect of house_age on price_log lies between 0.001 and 0.002. Thus, we can conclude that for each unit increase in the age of the house (in years), the expected log price of the house increases by approximately 0.0013 units, after controlling for the effects of the other variables in the model.\n",
+    "\n",
+    "The coefficient for 'grade_11 Excellent' is 0.4347, with a standard error of 0.024 and a p-value of 0.000. This suggests that the estimated effect of grade_11 Excellent on price_log is statistically significant and unlikely to have occurred by chance. Specifically, we can say with 95% confidence that the true effect of grade_11 Excellent on price_log lies between 0.388 and 0.481. Thus, we can conclude that a house with an excellent grade of 11 is expected to have a log price that is approximately 0.4347 units higher than a house with a lower grade, after controlling for the effects of the other variables in the model.\n",
+    "\n",
+    "Though R-squared value has increased slightly from the previous model, there may still be other important factors or variables that are not captured by the current model. It will be beneficial for us to continue to explore and add more features to the model.\n",
+    "\n",
+    "Let's add 'grade_7 Average' and see what happens. Then, we'll add a few more categorical variables, and probably call it a day."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second MLR model iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              price_log   R-squared:                       0.406\n",
+      "Model:                            OLS   Adj. R-squared:                  0.406\n",
+      "Method:                 Least Squares   F-statistic:                     5145.\n",
+      "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        08:57:25   Log-Likelihood:                -18666.\n",
+      "No. Observations:               30155   AIC:                         3.734e+04\n",
+      "Df Residuals:                   30150   BIC:                         3.738e+04\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "======================================================================================\n",
+      "                         coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------------\n",
+      "const                 12.1691      0.015    803.680      0.000      12.139      12.199\n",
+      "sqft_living_sqrt       0.0342      0.000    118.315      0.000       0.034       0.035\n",
+      "house_age              0.0018   8.66e-05     21.020      0.000       0.002       0.002\n",
+      "grade_11 Excellent     0.4236      0.023     18.191      0.000       0.378       0.469\n",
+      "grade_7 Average       -0.1547      0.006    -27.182      0.000      -0.166      -0.144\n",
+      "==============================================================================\n",
+      "Omnibus:                     6347.031   Durbin-Watson:                   1.968\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            55213.554\n",
+      "Skew:                          -0.769   Prob(JB):                         0.00\n",
+      "Kurtosis:                       9.448   Cond. No.                         635.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/learn-env/lib/python3.8/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only.\n",
+      "  x = pd.concat(x[::order], 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining x and y variables\n",
+    "y = df['price_log']\n",
+    "X_sixth = df[['sqft_living_sqrt', 'house_age', 'grade_11 Excellent', 'grade_7 Average']]\n",
+    "\n",
+    "# Creating fifth model\n",
+    "sixth_model = sm.OLS(endog=y, exog=sm.add_constant(X_sixth))\n",
+    "\n",
+    "# Fitting the model\n",
+    "sixth_results = sixth_model.fit()\n",
+    "\n",
+    "print(sixth_results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, to add 'bathrooms' feature, and 'season_spring', one of the features we engineered at the beginning of our data preparation, just to see how it fares in the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:              price_log   R-squared:                       0.428\n",
+      "Model:                            OLS   Adj. R-squared:                  0.428\n",
+      "Method:                 Least Squares   F-statistic:                     3757.\n",
+      "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        08:57:49   Log-Likelihood:                -18093.\n",
+      "No. Observations:               30155   AIC:                         3.620e+04\n",
+      "Df Residuals:                   30148   BIC:                         3.626e+04\n",
+      "Df Model:                           6                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "======================================================================================\n",
+      "                         coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------------\n",
+      "const                 12.1499      0.015    813.085      0.000      12.121      12.179\n",
+      "sqft_living_sqrt       0.0278      0.000     66.921      0.000       0.027       0.029\n",
+      "house_age              0.0024   9.03e-05     26.653      0.000       0.002       0.003\n",
+      "grade_11 Excellent     0.4122      0.023     18.036      0.000       0.367       0.457\n",
+      "grade_7 Average       -0.1553      0.006    -27.801      0.000      -0.166      -0.144\n",
+      "bathrooms              0.1004      0.005     20.715      0.000       0.091       0.110\n",
+      "season_spring          0.1611      0.006     27.680      0.000       0.150       0.172\n",
+      "==============================================================================\n",
+      "Omnibus:                     6581.998   Durbin-Watson:                   1.967\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            60811.136\n",
+      "Skew:                          -0.788   Prob(JB):                         0.00\n",
+      "Kurtosis:                       9.776   Cond. No.                         635.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/learn-env/lib/python3.8/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only.\n",
+      "  x = pd.concat(x[::order], 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining x and y variables\n",
+    "y = df['price_log']\n",
+    "X_seventh = df[['sqft_living_sqrt', 'house_age', 'grade_11 Excellent', 'grade_7 Average', 'bathrooms', 'season_spring']]\n",
+    "\n",
+    "# Creating fifth model\n",
+    "seventh_model = sm.OLS(endog=y, exog=sm.add_constant(X_seventh))\n",
+    "\n",
+    "# Fitting the model\n",
+    "seventh_results = seventh_model.fit()\n",
+    "\n",
+    "print(seventh_results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perfect! "
+   ]
   }
  ],
  "metadata": {
