working on readme file

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Long and Foster](Long_and_Foster.png)"
+    "![Long and Foster](Images/Long_and_Foster.png)"
    ]
   },
   {
@@ -623,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B. Data cleaning: handling missing values"
+    "## Data cleaning: handling missing values"
    ]
   },
   {
