final edits to notebook

--- a/student_notebook.ipynb
+++ b/student_notebook.ipynb
@@ -4,6 +4,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ***PHASE 2 PROJECT***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Long and Foster](Images/Long_and_Foster.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. BUSINESS UNDERSTANDING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Real estate company Long and Foster is interested in developing a predictive model that can estimate the sale price of a house in King County, Washington. By analyzing various factors such as the number of bedrooms, bathrooms, square footage of the house, location, and other important features, L&F aim to provide more accurate home sale price estimates to their clients and improve their business efficiency.\n",
+    "\n",
+    "The modeling process will also help Long and Foster identify potential investment opportunities in the county by analyzing which features have the most significant impact on the sale price of a house. By using the results of the analysis, the company can make better decisions regarding their investments in the county.\n",
+    "\n",
+    "The objective of this project is to create a multiple linear regression model that can predict the sale price of a house based on predictive factors and provide insights that can help Long and Foster improve their business operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why multiple linear regression?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of a basic, exploratory data analysis, we are using statistical analyses, such as regression coefficients and R-squared values. Such statistics allow us to identify and tactically measure the relationships between different variables in our data. Basic data analysis (i.e. creating graphs and charts) help us visualize our data and identify patterns, but it does not provide us with a formal measure of the strength of the relationships or the predictive power of the variables.\n",
+    "\n",
+    "Regression analysis estimate the coefficients of each variable and their statistical significance, which helps us to understand the relative importance of each variable in predicting the target (price).\n",
+    "\n",
+    "In addition, regression analysis allows us to control for the effects of other variables in the model and assess their impact on the dependent variable. This allows us to isolate the effect of each independent variable on the dependent variable and identify potential investment opportunities based on the variables that have the most significant impact on house prices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this project, we are using 'kc_house_data.csv', a public, tabular dataset lifted from from King County, WA's website (kingcounty.gov).\n",
+    "\n",
+    "Our target variable is 'price', which records final sale price of King County homes. Columns serve as features (predictors) in this dataset. The dataset has been updated to include homes sold up until the year 2022."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2. DATA UNDERSTANDING"
    ]
   },
@@ -1711,7 +1777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks like all of these 'sqft' features (numerical, continuous) look way more normal and linear when log transformed. We will work with these moving forward. Let's try to iterate our baseline model, using all of these log-transformed features:"
+    "Looks like all of these 'sqft' features (numerical, continuous) look more normal and linear when log transformed. We will work with these moving forward. Let's try to iterate our baseline model, using all of these log-transformed features:"
    ]
   },
   {
@@ -2702,19 +2768,12 @@
     "\n",
     "and Zip Tear 5 consists of zipcodes: 98055, 98133, 98178, 98118, 98027, 98166, 98030, 98023, 98019, 98144, 98031, 98092, 98103, 98136, 98038, 98057, 98077, 98126, 98053, 98039, 98107, 98155, 98168, 98199, 98045, 98052, 98011, 98033, 98116, 98198, 98125, 98112, 98034, 98056, 98059, 98040, 98014, 98106, 98029, 98122, 98117, 98042, 98119, 98065, 98022, 98072, 98058, 98108, 98115, 98074, 98105, 98024, 98146, 98109, 98102, 98028, 98188, 98177, 98075, 98148, 98047, 98032, 98070, 98051, 98272, 98271, 98050, 98251, 98223, 98224, 98270\n",
     "\n",
-    "In real-world applications, this information can be used by Long and Foster to identify which areas have the highest demand for homes and which areas are likely to see the greatest appreciation in value over time. By focusing their marketing efforts and investing in properties in these zip codes, they can maximize their profits and provide their clients with the best possible returns on their investments.\n",
+    "This information can be used by Long and Foster to identify which areas have the highest demand for homes and which areas are likely to see the greatest appreciation in value over time. By focusing their marketing efforts and investing in properties in these zip codes, they can maximize their profits and provide their clients with the best possible returns on their investments.\n",
     "\n",
     "Additionally, the zip tier features can also provide valuable insights into the amenities and features of each location. For example, properties in zip_tier_6 and zip_tier_7 are likely to be closer to urban centers and have access to a wider range of amenities, such as restaurants, shopping centers, and public transportation. Properties in zip_tier_5, on the other hand, may be more suburban or rural and offer more space and privacy.\n",
     "\n",
     "Overall, the zip tier features and their coefficients provide a wealth of information for real estate companies like Long and Foster. By understanding the impact of location on the price of a house, they can make informed decisions about where to invest their resources and how to market their properties to potential buyers."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
