--- a/student_notebook.ipynb
+++ b/student_notebook.ipynb
@@ -2293,7 +2293,7 @@
    "metadata": {},
    "source": [
     "Based on the statistical significance of the coefficients (as indicated by the p-values in the \"P>|t|\" column), there are a few features that could potentially be dropped to avoid multicollinearity of features: season_winter, sewer_system_PUBLIC RESTRICTED, heat_source_Oil\n",
-    "heat_source_Oil/Solar, heat_source_Other, greenbelt_YES, luxury_grade, sqft_garage_log. We will drop them, along with 'lat' and 'long', from our exogenous features list in our next (and perhaps final) iteration:"
+    "heat_source_Oil/Solar, heat_source_Other, greenbelt_YES, luxury_grade, sqft_garage_log. We will drop them, along with 'lat', 'long', and anomalous feature 'bedrooms' from our exogenous features list in our next (and perhaps final) iteration:"
    ]
   },
   {
