final presentation changes

--- a/student_notebook.ipynb
+++ b/student_notebook.ipynb
@@ -2809,9 +2809,7 @@
     "\n",
     "This information can be used by Long and Foster to identify which areas have the highest demand for homes and which areas are likely to see the greatest appreciation in value over time. By focusing their marketing efforts and investing in properties in these zip codes, they can maximize their profits and provide their clients with the best possible returns on their investments.\n",
     "\n",
-    "Additionally, the zip tier features can also provide valuable insights into the amenities and features of each location. For example, properties in zip_tier_6 and zip_tier_7 are likely to be closer to urban centers and have access to a wider range of amenities, such as restaurants, shopping centers, and public transportation. Properties in zip_tier_5, on the other hand, may be more suburban or rural and offer more space and privacy.\n",
-    "\n",
-    "Overall, the zip tier features and their coefficients provide a wealth of information for real estate companies like Long and Foster. By understanding the impact of location on the price of a house, they can make informed decisions about where to invest their resources and how to market their properties to potential buyers.\n"
+    "Additionally, the zip tier features can also provide valuable insights into the amenities and features of each location. For example, properties in zip_tier_6 and zip_tier_7 are likely to be closer to urban centers and have access to a wider range of amenities, such as restaurants, shopping centers, and public transportation. Properties in zip_tier_5, on the other hand, may be more suburban or rural and offer more space and privacy."
    ]
   },
   {
