--- a/student_notebook.ipynb
+++ b/student_notebook.ipynb
@@ -2548,8 +2548,10 @@
     "***For waterfront_YES:***\n",
     "\n",
     "The coefficient for waterfront_YES is 0.7502.\n",
-    "This means that, holding all other variables constant, a property with a waterfront view is associated with a 75.02% increase in price_log compared to a property without a waterfront view.\n",
-    "This translates to a (exp(0.7502) - 1) * 100 = 110.87% increase in price.\n",
+    "This means that, ***holding all other variables constant***, a property with a waterfront view is associated with a 75.02% increase in price_log compared to a property without a waterfront view.\n",
+    "This translates to a (exp(0.7502) - 1) * 100 = 112.09% increase in price. This seems astronomical, and this figure would likely decrease with the addition of other non-correlated variables in modeling. However, it's a good indication that waterfront properties sell for much higher than non-waterfront properties.\n",
+    "\n",
+    "This calculation assumes a ***linear relationship*** between the waterfront_YES variable and the price of the property, and that the effect may not necessarily be the same across all levels of the other variables in the model. It also does not take into account any potential confounding variables that may be affecting the relationship between waterfront views and property prices.\n",
     "\n",
     "***For price_tier_High:***\n",
     "\n",
